
2008-04-06	Rupert Germann <rupi@gmx.li>

	* Changes in module 'news admin':
	* added support for allowed/disallowed categories
	* added support for user/page TSConfig and added a default configuration to pageTSConfig in ext_tables.php
	* new checkbox (list): 'Show only editable records'. Allows the user to switch the display of not editable news articles on or off. (this checkbox is invisible for admins)
	* new checkbox (tree): 'Show hidden categories'. Allows the user to switch the display of hidden categories on or off.
	* all checkboxes can be hidden in TSConfig: mod.web_txttnewsM1.list.show.cb_[name of the checkbox] and mod.web_txttnewsM1.catmenu.show.cb_[name of the checkbox]
	* added an extra icon for news which are not editable due to disallowed categories
	* added a language selector which shows the languages (page_language_overlay records) of the allowed pages of a normal BE user, or it shows all languages if the user is admin.
	* new TSConfig option: 'mod.web_txttnewsM1.defaultLanguageLabel'. Overrides the label for the default language in the language selector

	* added a check to the tree class for BE forms which informs the user if a category he edits is not in the general record storage page (if the use of GRSP is enabled).
	* improved the 'no categories found' message: added a list which links the pages with news categories where the user has access to (inspired by templavoilá).
	* new clickmenu options in tree: 'add new category on this level' and 'add subcategory'. Additionally to the 'new category' button on top of the tree these 2 options allow the user to create categories at a certain level in the tree.
	* did a lot of improvements in the clickmenu class (f.i. the clickmenu items for manipulating records do now only show up if the user has edit permissions)


2008-04-04	Rupert Germann <rupi@gmx.li>

	* moved all templates to folder pi/ to res/
	* added a new html default template: tt_news_v2.6_template.html

